<resources>
    <string name="app_name">GenieTalk</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="ok">OK</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_profile">Profile</string>
    <string name="nav_transactions">Transactions</string>
    <string name="nav_wallet">Wallet</string>
    <string name="nav_promotions">Promotions</string>
    <string name="nav_genierewards">Genie Rewards</string>
    <string name="nav_eliteclub">Elite Club</string>
    <string name="nav_tipgenie">Tip Genie</string>
    <string name="nav_help">Help</string>
    <string name="nav_legal">Legal</string>
    <string name="nav_alerts">Alerts</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_referandearn">Refer &amp; Earn</string>
    <string name="nav_logout">Logout</string>


    <!--For Finger Print-->

    <string name="title_fingerprint">One-touch Sign In</string>
    <string name="desc_fingerprint">Please place your fingertip on the scanner to verify your identity</string>
    <string name="note">Your device should have at least one fingerprint registered in device settings</string>
    <string name="no_finger_senso">Your device has no Fingerprint sensor</string>
    <string name="errore_generico">Ops! There was an error</string>
    <string name="finger_prints_match">Finger Prints match</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="finger_prints">Finger Print Screen</string>
    <string name="not_now">Not now</string>
    <string name="link_your_fingerprint">Link your fingerprint</string>
    <string name="finger_print_txt">Finger prints for GenieTalk app</string>
    <string name="confirm_finger_print">Confirm your finger print</string>
    <string name="finger_print_enabled">Your finger print setting enable</string>
    <string name="finger_print_disable">Your finger print setting is disable</string>
    <string name="change_finger_print_setting">Change finger print setting</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="storage_permission_already_given">Storage permission already given</string>
    <string name="all_permission_not_granted">All Permissions not granted</string>
    <string name="all_permission_granted">All Permissions granted</string>
    <string name="touch_id_ready">Touch id is ready to\ngo</string>
    <string name="finger_print_txt1">Log in with your Touch ID</string>
    <string name="finger_print_txt2">Use your Touch ID to provide easy, fast access to your Inventor Inventor account.</string>
    <string name="finger_print_txt3">Remember, all touch-ID fingerprints stored on this device can be used to log in to your account.</string>
    <string name="finger_print_link">Use your Touch ID</string>

    <!--apps-->
    <string name="genie_talk_pvt_ltd">GenieTalk Pvt. Ltd.</string>
    <string name="info_genietalk_email">info@genietalk.com</string>
    <string name="todd_wallace">Todd Wallace</string>
    <string name="profile_completed">Profile Completed 100%</string>
    <string name="points">10000 Points</string>
    <string name="join_elite_club">JOIN ELITE CLUB</string>
    <string name="tier_benifits">TIER BENEFIT</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="refer_earn">Refer &amp; Earn</string>
    <string name="help">Help</string>
    <string name="legal">Legal</string>
    <string name="tip_genie">Tip Genie</string>
    <string name="elite_club">Elite Club</string>
    <string name="transaction">Transaction</string>
    <string name="wallet">Wallet</string>
    <string name="promotions">Promotions</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="new_york_usa">New York USA</string>
    <string name="share_your_referal_code">Share your referal code</string>
    <string name="frequently_asked_questions">Frequently asked questions?</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="theme">Theme</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="general">General</string>
    <string name="information">Informative</string>
    <string name="critical">Critical</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="payment_method">Payment Method</string>
    <string name="add_card">Add Card</string>
    <string name="add_member">Add Member</string>
    <string name="tier_member">Tier Membership</string>
    <string name="set_password">Set Password</string>
    <string name="check_password">App Password</string>

    <string name="report_an_issue">Report an issue</string>
    <string name="faq">FAQ</string>
    <string name="submit_feedback">Submit Feedback</string>

    <string name="about_us">About US</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="refund_cancellations_policy">Refund  &amp; Cancellations Policy</string>
    <string name="location_information_policy">Location Information Policy</string>
    <string name="date_providers">Data Providers</string>
    <string name="software_license">Software License</string>
    <string name="copy_right">Copy Right</string>
    <string name="gold_member_benifits">Gold Members Benifit</string>
    <string name="remove_my_account">Remove my Account</string>
    <string name="enable_password_protection">Enable Security</string>

    <string name="upi">UPI</string>
    <string name="credit_card">Credit Card</string>
    <string name="debit_card">Debit Card</string>
    <string name="net_baking">Net Banking</string>


    <string name="description">Lorem ipsum is simply dummy text of the printing and typesetting industry.</string>

    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>


    <!--Shared Preference-->
    <string name="share_preference_name">GenieTalk</string>
    <!--!shared Preference-->

</resources>
