<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <LinearLayout
        android:id="@+id/screenId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/header"></include>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/headerRL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@color/profile_header"
            android:layout_marginTop="15dp">
            <TextView
                android:id="@+id/headerTV1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general"
                android:textColor="@color/icons"
                android:textSize="@dimen/sp_12"
                />
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/topbackarrow"
                android:rotation="180"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:layout_centerVertical="true"
                android:tint="@color/icons"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/headerRL2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@color/profile_header"
            android:layout_marginTop="1dp">
            <TextView
                android:id="@+id/headerTV2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information"
                android:textColor="@color/icons"
                android:textSize="@dimen/sp_12"
                />
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/topbackarrow"
                android:rotation="180"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:layout_centerVertical="true"
                android:tint="@color/icons"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/headerRL3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@color/profile_header"
            android:layout_marginTop="1dp">
            <TextView
                android:id="@+id/headerTV3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/critical"
                android:textColor="@color/icons"
                android:textSize="@dimen/sp_12"
                />
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/topbackarrow"
                android:rotation="180"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:layout_centerVertical="true"
                android:tint="@color/icons"/>
        </RelativeLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
