<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <LinearLayout
        android:id="@+id/screenId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/header"></include>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:id="@+id/aboutUsRL"
                    >
                    <TextView
                        android:id="@+id/aboutusTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_us"
                        android:textColor="@color/gold"
                        android:textStyle="normal"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:textSize="@dimen/help_screen_txt_size"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_right_arrow_gold"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"

                        />
                    <View
                        android:id="@+id/dividerLine1"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/divider"
                        android:layout_alignParentBottom="true"></View>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:id="@+id/termsConditionRL"
                    >
                    <TextView
                        android:id="@+id/termsConditionTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/terms_and_conditions"
                        android:textColor="@color/gold"
                        android:textStyle="normal"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:textSize="@dimen/help_screen_txt_size"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_right_arrow_gold"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"

                        />
                    <View
                        android:id="@+id/dividerLine2"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/divider"
                        android:layout_alignParentBottom="true"></View>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:id="@+id/privacyPolicyRL"
                    >
                    <TextView
                        android:id="@+id/privacyPolicyTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/gold"
                        android:textStyle="normal"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:textSize="@dimen/help_screen_txt_size"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_right_arrow_gold"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"

                        />
                    <View
                        android:id="@+id/dividerLine3"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/divider"
                        android:layout_alignParentBottom="true"></View>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:id="@+id/refundCancellationRL"
                    >
                    <TextView
                        android:id="@+id/refundCancellationTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/refund_cancellations_policy"
                        android:textColor="@color/gold"
                        android:textStyle="normal"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:textSize="@dimen/help_screen_txt_size"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_right_arrow_gold"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"

                        />
                    <View
                        android:id="@+id/dividerLine4"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/divider"
                        android:layout_alignParentBottom="true"></View>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:id="@+id/locationInformationRL"
                    >
                    <TextView
                        android:id="@+id/locationInformationTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/location_information_policy"
                        android:textColor="@color/gold"
                        android:textStyle="normal"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:textSize="@dimen/help_screen_txt_size"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_right_arrow_gold"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"

                        />
                    <View
                        android:id="@+id/dividerLine5"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/divider"
                        android:layout_alignParentBottom="true"></View>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:id="@+id/dataProviderRL"
                    >
                    <TextView
                        android:id="@+id/dataProviderTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date_providers"
                        android:textColor="@color/gold"
                        android:textStyle="normal"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:textSize="@dimen/help_screen_txt_size"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_right_arrow_gold"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"

                        />
                    <View
                        android:id="@+id/dividerLine6"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/divider"
                        android:layout_alignParentBottom="true"></View>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:id="@+id/softwareLicenceRL"
                    >
                    <TextView
                        android:id="@+id/softwareLicenceTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/software_license"
                        android:textColor="@color/gold"
                        android:textStyle="normal"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:textSize="@dimen/help_screen_txt_size"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_right_arrow_gold"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"

                        />
                    <View
                        android:id="@+id/dividerLine7"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/divider"
                        android:layout_alignParentBottom="true"></View>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:id="@+id/copyRightRL"
                    >
                    <TextView
                        android:id="@+id/copyRightTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/copy_right"
                        android:textColor="@color/gold"
                        android:textStyle="normal"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:textSize="@dimen/help_screen_txt_size"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_right_arrow_gold"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"

                        />
                    <View
                        android:id="@+id/dividerLine8"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/divider"
                        android:layout_alignParentBottom="true"></View>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
